# autodiff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  IModule_8hpp.html  IModule_8hpp__dep__incl.dot  IModule_8hpp__incl.dot  IModule_8hpp_source.html  Logger_8cpp.html  Logger_8cpp__incl.dot  Logger_8hpp.html  Logger_8hpp__dep__incl.dot  Logger_8hpp__incl.dot  Logger_8hpp_source.html  Modules_8hpp.html  Modules_8hpp__dep__incl.dot  Modules_8hpp__incl.dot  Modules_8hpp_source.html  Node_8hpp.html  Node_8hpp__dep__incl.dot  Node_8hpp__incl.dot  Node_8hpp_source.html  README.md  README_8md.html  ScalarTest_8cpp.html  ScalarTest_8cpp__incl.dot  Stopwatch.hpp  Stopwatch_8hpp.html  Stopwatch_8hpp__incl.dot  Stopwatch_8hpp_source.html  Tests_8cpp.html  Tests_8cpp__incl.dot  Variable_8hpp_source.html  VectorTest_8cpp.html  VectorTest_8cpp__incl.dot  annotated.html  classBasicBackend-members.html  classBasicBackend.html  classLoggerTests-members.html  (+77 more)
.github/workflows/: basic.yaml  doxygen.yaml
libs/AutoDiff/: CMakeLists.txt
libs/AutoDiff/include/: IModule.hpp  Modules.hpp  Node.hpp  Variable.hpp
libs/AutoDiff/tests/: CMakeLists.txt  ScalarTest.cpp  VectorTest.cpp
libs/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
libs/Logger/tests/: CMakeLists.txt  Tests.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  concepts_0.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_2.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  (+15 more)
src/: main.cpp
